Snake/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: snake
  labels:
    app.kubernetes.io/component: backend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics.php
    prometheus.io/port: "80"
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
