Snake/k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-frontend
  namespace: snake
spec:
  ingressClassName: nginx
  rules:
    - host: snake.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
